--- a/CodeWalletWidget/Base.lproj/Main.storyboard
+++ b/CodeWalletWidget/Base.lproj/Main.storyboard
@@ -82,6 +82,39 @@
             </objects>
             <point key="canvasLocation" x="1012" y="792.95352323838085"/>
         </scene>
+        <!--Privacy Policy View Controller-->
+        <scene sceneID="cmy-FB-rQB">
+            <objects>
+                <viewController storyboardIdentifier="PrivacyPolicyViewController" id="gwm-bt-f8U" customClass="PrivacyPolicyViewController" customModule="CodeWalletWidget" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wGV-B4-cfq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jRY-Ib-g9A">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jRY-Ib-g9A" firstAttribute="trailing" secondItem="lEX-Pg-eiR" secondAttribute="trailing" id="7OH-PU-3T7"/>
+                            <constraint firstItem="jRY-Ib-g9A" firstAttribute="top" secondItem="lEX-Pg-eiR" secondAttribute="top" id="8ek-T7-4mi"/>
+                            <constraint firstItem="jRY-Ib-g9A" firstAttribute="leading" secondItem="lEX-Pg-eiR" secondAttribute="leading" id="OGE-FR-wLT"/>
+                            <constraint firstItem="jRY-Ib-g9A" firstAttribute="bottom" secondItem="lEX-Pg-eiR" secondAttribute="bottom" id="aMS-cE-HRu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lEX-Pg-eiR"/>
+                    </view>
+                    <connections>
+                        <outlet property="textView" destination="jRY-Ib-g9A" id="Gat-rc-jqe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PpV-iZ-H9t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2876" y="792.95352323838085"/>
+        </scene>
         <!--Settings-->
         <scene sceneID="5WT-fD-PqP">
             <objects>
@@ -230,13 +263,13 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DFA-Ne-Ml3">
                                                     <rect key="frame" x="16" y="11" width="343" height="22"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="⏮" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jm7-IF-fHm">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="🔒" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jm7-IF-fHm">
                                                             <rect key="frame" x="0.0" y="0.0" width="23" height="22"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Replay Tutorial" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrm-YB-0GC">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Privacy Policy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrm-YB-0GC">
                                                             <rect key="frame" x="33" y="0.0" width="310" height="22"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
