--- a/CodeWalletWidget/Base.lproj/Main.storyboard
+++ b/CodeWalletWidget/Base.lproj/Main.storyboard
@@ -388,7 +388,7 @@
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fE3-Y5-fOA">
                                 <rect key="frame" x="127" y="459" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kvy-ZC-Lx6">
                                 <rect key="frame" x="42" y="416" width="290" height="206"/>
@@ -484,10 +484,10 @@
             </objects>
             <point key="canvasLocation" x="2876" y="1540"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Code Table View Navigation Controller-->
         <scene sceneID="iqD-4G-GYt">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Glo-S7-7Bs" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Glo-S7-7Bs" customClass="CodeTableViewNavigationController" customModule="CodeWalletWidget" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OvV-36-pWY">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
